@@ -5,8 +5,10 @@ connection details needed to connect to Plex Media Server, Radarr, Sonarr, and o
 
 By default, and unless otherwise stated, Kometa looks for the configuration file at `/config/config.yml`.
 
-A template Configuration File can be found in the 
+A template Configuration Template File can be found in the 
 [GitHub Repo](https://github.com/Kometa-Team/Kometa/blob/master/config/config.yml.template).
+
+If Kometa cannot find the `config.yml` at the default location, it will attempt to rename `config.yml.template` for the user. If the template file cannot be found, Kometa will attempt to download a copy from the GitHub repository in line with the user's current branch. If this also fails, the user will have to download the Configuration Template File from the above link and manually rename it to `config.yml`
 
 This table outlines the third-party services that Kometa can make use of. Each service has specific 
 requirements for setup that can be found by clicking the links within the table or in the sidebar.
@@ -31,9 +33,10 @@ requirements for setup that can be found by clicking the links within the table 
 | [`trakt`](trakt.md)                         | :fontawesome-solid-circle-xmark:{ .red }                              |
 | [`mal`](myanimelist.md)                     | :fontawesome-solid-circle-xmark:{ .red }                              |
 
-## Configuration File Example
+## Configuration Template File Example
 
-This example outlines what a "standard" config.yml file might look like when in use.
+The below in an extract of the `config.yml.template` and is the initial values that are set if you follow any of the 
+installation guides.
 
 ~~~yaml
 {%    
