@@ -3,11 +3,15 @@ Update pillow requirement to 11.0.0
 Update psutil requirement to 6.1.0
 Update setuptools requirement to 75.3.0
 
+# Important Changes
+Python 3.8 is no longer supported. The minimum version of Python required is now 3.9.
+
 # New Features
 Added the `character` search option to the `imdb_search` builder
 Added ability to use Show-level ratings at the season and episode level for Overlays if the original source does not provide ratings at the season or episode level. This is accomplished using (Special Text Variables)[https://kometa.wiki/en/latest/files/overlays/#special-text-variables] but is not yet available for the `Ratings` Defaults file.
 Add `show_unfiltered` setting to display items which make it through a filter
 Allow `sync_to_trakt_list` on episode-level collections
+Logic added to Kometa to create `config.yml` if it does not exist from the `config.yml.template` file. If the template file cannot be found, Kometa will attempt to download it from GitHub.
 
 # Docs
 Added "getting started" page
@@ -21,6 +25,7 @@ Fixes an issue where Prime Video overlays/collections would not be built when th
 Fixes an issue where Rotten Tomatoes Verified Hot wasn't working
 Updates `Alien vs Predator` and `X-Men` lists to new lists which include most recent releases
 Adds `style` template variable for Streaming and Chart defaults, allowing user to choose color or white logos for collection posters
+Added `Paramount+ with Showtime` to both `Paramount+` and `Showtime` for Networks and Streaming, any existing weighting is unchanged.
 
 # Bug Fixes
 Fixed the `cast` search option for the `imdb_search` builder
